refactored offer http client